# openscad-customizer

./: .gitignore  LICENSE.md  Makefile  README.md  package.json  webpack.config.js
.github/workflows/: pages.yml
libs/openscad-wasm/: openscad.js
public/: index.html  manifest.json
src/: index.css  index.tsx
src/components/: App.tsx  AssistantPanel.tsx  PanelSwitcher.tsx  SourceUpdater.tsx
src/fs/: filesystem.ts
src/runner/: actions.ts
src/state/: app-state.ts  deep-mutate.ts  fragment-state.ts  initial-state.ts  model.ts
zenfs-test/: CMakeLists.txt  README.md  minicat.cc
